--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: jekyll-theme-chirpy
 
 # Change the following value to '/PROJECT_NAME' ONLY IF your site type is GitHub Pages Project sites
 # and doesn't have a custom domain.
-baseurl: '/ContractFirst'
+baseurl: ""
 
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
@@ -29,7 +29,7 @@ description: >-                        # used by seo meta and the atom feed
   Software Engineer focusing on .NET and Web technologies
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: "https://cory-c.github.io"
 
 github:
   username: cory-c             # change to your github username
